--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-fetch": "^2.6.1",
+    "axios": "^0.21.4"
   }
 }
